# wc-tool

./: requirements.txt  setup.cfg
src/: main.py
