[metadata]
name = wc-tool
version = 0.1.0
author = SurajpratapsinghSayar 
author_email = sunnysayar@outlook.com
description = Building my own wc tool 
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.11
install_requires =
    typer[all]==0.9.0
    click==8.1.7

[options.entry_points]
console_scripts =
    ccwc = src.main:ccwc
